--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,14 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#1cbaba">
+        android:background="#8BC34A">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:elevation="1dp">
+
             <TextView
                 android:id="@+id/titleText"
                 android:layout_width="wrap_content"
@@ -34,7 +35,7 @@
             </TextView>
 
         </androidx.appcompat.widget.Toolbar>
-<!--https://m.blog.naver.com/PostView.nhn?blogId=qbxlvnf11&logNo=221436373954&proxyReferer=https:%2F%2Fwww.google.com%2F
+        <!--https://m.blog.naver.com/PostView.nhn?blogId=qbxlvnf11&logNo=221436373954&proxyReferer=https:%2F%2Fwww.google.com%2F
 데이터피커-->
 
     </com.google.android.material.appbar.AppBarLayout>
