타이틀바 위치빼고 살짝씩 변경

--- a/app/src/main/res/menu/month_main.xml
+++ b/app/src/main/res/menu/month_main.xml
@@ -6,4 +6,11 @@
         android:title="오늘"
         app:showAsAction="always"
         />
+
+    <item
+        android:id="@+id/tab5"
+        app:showAsAction="always"
+        android:title="설정"
+        android:icon="@drawable/setting"
+        android:enabled="true"/>
 </menu>
