--- a/app/src/main/res/drawable/item_color.xml
+++ b/app/src/main/res/drawable/item_color.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--아이템이 선택됬을 때 색-->
-    <item android:state_checked="true" android:color="#51032d"/>
-    <!--아이템이 기본적일 때 색-->
-    <item android:color="#cccccc"/>
+    <item android:state_checked="true" android:color="#8BC34A"/>
+    <item android:color="#757575"/>
 </selector>
