--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -5,25 +5,31 @@
         android:id="@+id/tab1"
         app:showAsAction="always"
         android:title="월별"
-        android:icon="@drawable/month"/>
+        android:icon="@drawable/month"
+        android:enabled="true"
+        />
     <item
         android:id="@+id/tab2"
         app:showAsAction="always"
         android:title="주별"
-        android:icon="@drawable/week"/>
+        android:icon="@drawable/week"
+        android:enabled="true"/>
     <item
         android:id="@+id/tab3"
         app:showAsAction="always"
         android:title="일별"
-        android:icon="@drawable/today"/>
+        android:icon="@drawable/today"
+        android:enabled="true"/>
     <item
         android:id="@+id/tab4"
         app:showAsAction="always"
         android:title="통계"
-        android:icon="@drawable/bar_chart"/>
-    <item
+        android:icon="@drawable/bar_chart"
+        android:enabled="true"/>
+    <!--<item
         android:id="@+id/tab5"
         app:showAsAction="always"
         android:title="설정"
-        android:icon="@drawable/setting"/>
+        android:icon="@drawable/setting"
+        android:enabled="true"/>-->
 </menu>
