--- a/app/src/main/res/layout/activity_update_money_book.xml
+++ b/app/src/main/res/layout/activity_update_money_book.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RegMoneyBookActivity" >
+    tools:context=".daily.RegMoneyBookActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -72,8 +72,8 @@
             android:text="자산종류"
             android:textSize="14sp" />
 
-        <Spinner
-            android:id="@+id/assetSpinner"
+        <Button
+            android:id="@+id/assetUpdateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -95,8 +95,8 @@
             android:text="카테고리"
             android:textSize="14sp" />
 
-        <Spinner
-            android:id="@+id/selectCategorySpinner"
+        <Button
+            android:id="@+id/categoryUpdateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
