--- a/app/src/main/res/layout/pie_item.xml
+++ b/app/src/main/res/layout/pie_item.xml
@@ -31,6 +31,12 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:gravity="right"/>
+                <TextView
+                    android:id="@+id/assetPer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:gravity="center"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 </LinearLayout>
