--- a/app/src/main/res/layout/fragment_stock.xml
+++ b/app/src/main/res/layout/fragment_stock.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".economyinfo.StockFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/kospiTextview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="주식" />
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+         />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/KOSDAQTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+         />
+
+</LinearLayout>
